--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatsby-starter-2column-portfolio",
-  "description": "Gatsby 2 Column Portfolio Starter",
+  "description": "xGatsby 2 Column Portfolio Starter",
   "repository": {
     "type": "git",
     "url": "https://github.com/praagyajoshi/gatsby-starter-2column-portfolio"
